Try to fix a potential elastic/phantom scroll issue on Safari iOS

--- a/src/scss/_aspect-ratio.scss
+++ b/src/scss/_aspect-ratio.scss
@@ -13,6 +13,11 @@
   > a:only-child {
     display: block;
   }
+
+  // Avoid potential elastic/phantom scroll issue on Safari iOS
+  > .min-h-100 {
+    min-height: calc(100% - 0.1px) !important;
+  }
 }
 
 img.aspect { // stylelint-disable-line selector-no-qualifying-type
